crates/ddlog-syntax/tests/validation/fail/double_extern_function.rast
ROOT@0..66
  COMMENT@0..26 "// kind:item validate ..."
  WHITESPACE@26..27 "\n"
  ITEM@27..66
    FUNCTION_DEF@27..66
      ATTRIBUTES@27..27
      MODIFIERS@27..40
        EXTERN@27..33 "extern"
        WHITESPACE@33..34 " "
        EXTERN@34..40 "extern"
      WHITESPACE@40..41 " "
      FUNCTION@41..49 "function"
      WHITESPACE@49..50 " "
      FUNCTION_NAME@50..53
        IDENT@50..53 "foo"
      FUNCTION_ARGS@53..62
        L_PAREN@53..54 "("
        FUNCTION_ARG@54..61
          ATTRIBUTES@54..54
          VAR_REF@54..57
            IDENT@54..57 "bar"
          COLON@57..58 ":"
          WHITESPACE@58..59 " "
          TYPE@59..61
            GENERIC_TYPE@59..61
              IDENT@59..61 "u8"
        R_PAREN@61..62 ")"
      WHITESPACE@62..63 " "
      BLOCK@63..65
        L_CURLY@63..64 "{"
        R_CURLY@64..65 "}"
      WHITESPACE@65..66 "\n"
--
Error: received multiple 'extern' modifiers where one was expected
   ,-[validation/fail/double_extern_function.dl:2:8]
   |
 2 | extern extern function foo(bar: u8) {}
   : ^^^|^^ ^^^|^^  
   :    `----------- first 'extern' given here
   :           |    
   :           `---- functions can only have a single 'extern' modifier
---'
--
// kind:item validate:true
extern extern function foo(bar: u8) {}

